Fix buffer overflow with GCC 4.5 -D_FORTIFY_SOURCE=2

--- a/programming/language/tcl/tcl/pspec.xml
+++ b/programming/language/tcl/tcl/pspec.xml
@@ -16,6 +16,7 @@
         <Patches>
             <Patch>threadstorage.patch</Patch>
             <Patch level="2">tcl-8.5_alpha6-tclm4-soname.patch</Patch>
+            <Patch>tcl-8.5.8-fortify.patch</Patch>
         </Patches>
     </Source>
 
@@ -34,7 +35,7 @@
         <Name>tcl-devel</Name>
         <Summary>Development files for tcl</Summary>
         <RuntimeDependencies>
-            <Dependency release="14">tcl</Dependency>
+            <Dependency release="15">tcl</Dependency>
         </RuntimeDependencies>
         <Files>
             <Path fileType="header">/usr/include</Path>
@@ -45,6 +46,13 @@
     </Package>
 
     <History>
+        <Update release="15">
+            <Date>2010-08-24</Date>
+            <Version>8.5.8</Version>
+            <Comment>Fix buffer overflow with GCC 4.5 -D_FORTIFY_SOURCE=2</Comment>
+            <Name>Fatih Aşıcı</Name>
+            <Email>fatih@pardus.org.tr</Email>
+        </Update>
         <Update release="14">
             <Date>2010-08-18</Date>
             <Version>8.5.8</Version>
