--- a/programming/language/java/sun-java/pspec.xml
+++ b/programming/language/java/sun-java/pspec.xml
@@ -13,8 +13,8 @@
         <IsA>library</IsA>
         <Summary>Sun's J2SE Development Kit</Summary>
         <Description>Java Platform, Standard Edition (also known as Java 2 Platform) lets you develop and deploy Java applications on desktops and servers, as well as today's demanding Embedded and Real-Time environments.</Description>
-        <Archive sha1sum="8f3b750bd108a38fb3931e6bd5b0fcd6ab13951b" type="binary">http://download.java.net/dlj/binaries/jdk-6u19-dlj-linux-i586.bin</Archive>
-        <Archive sha1sum="272a92b20929d00a3f332c7cca81aea596f0b0f3" type="binary">http://download.java.net/dlj/binaries/jdk-6u19-dlj-linux-amd64.bin</Archive>
+        <Archive sha1sum="a7b0a8f47aa5a35a48271f8013418c72b1bf1cac" type="binary" target="i686">http://download.java.net/dlj/binaries/jdk-6u22-dlj-linux-i586.bin</Archive>
+        <Archive sha1sum="123c494193a1de178dcfa06a601c544794fb6132" type="binary" target="x86_64">http://download.java.net/dlj/binaries/jdk-6u22-dlj-linux-amd64.bin</Archive>
         <AdditionalFiles>
             <AdditionalFile permission="0755" target="construct">construct.sh</AdditionalFile>
         </AdditionalFiles>
@@ -117,6 +117,13 @@
     </Package>
 
     <History>
+        <Update release="30" type="security">
+            <Date>2010-11-23</Date>
+            <Version>1.6.0_p22</Version>
+            <Comment>Version bump to deliver various security vulnerabilities (CVE-2010-{3556,3562,3565,3566,3567,3571,3554,3563,3568,3569,3558,3552,3559,3572,3553,3555,3550,3570,3561,1321,3549,3557,3541,3573,3574,3548,3551,3560},CVE-2009-3555) </Comment>
+            <Name>Gokhan Ozbulak</Name>
+            <Email>gozbulak@pardus.org.tr</Email>
+        </Update>
         <Update release="29">
             <Date>2010-11-01</Date>
             <Version>1.6.0_p19</Version>
