Deliver multiple security vulnerabilities  - CVE-2010-4150  - CVE-2010-3710

--- a/programming/language/php/php/pspec.xml
+++ b/programming/language/php/php/pspec.xml
@@ -27,6 +27,8 @@
             <Dependency>freetype-devel</Dependency>
         </BuildDependencies>
         <Patches>
+            <Patch level="1">denial_of_service_in_filter_var.patch</Patch>
+            <Patch level="1">double_free_in_imap.patch</Patch>
             <Patch>php5-imap-symlink.diff</Patch>
             <Patch>php5.2.0-mysqli-readmycnf.patch</Patch>
             <Patch>php5.2.0-mysql-readmycnf.patch</Patch>
@@ -123,6 +125,16 @@
     </Package>
 
     <History>
+        <Update release="84">
+            <Date>2010-12-24</Date>
+            <Version>5.2.14</Version>
+            <Comment>Fix multiple security vulnerabilities
+                - CVE-2010-4150 : double free in imap extension
+                - CVE-2010-3710 : denial of service in filter_var()
+            </Comment>
+            <Name>Gökhan Özbulak</Name>
+            <Email>gozbulak@pardus.org.tr</Email>
+        </Update>
         <Update release="83">
             <Date>2010-12-09</Date>
             <Version>5.2.14</Version>
